@startuml
hide circle

entity "ships_live_data" as ships {
    * ship_id : INTEGER <<PK>>
    --
    ship_name : VARCHAR(50)
    course_over_ground : FLOAT
    speed_over_ground : FLOAT
    navigational_status : VARCHAR(100)
    latitude : DOUBLE PRECISION
    longitude : DOUBLE PRECISION
    updated_at : TIMESTAMPTZ
}

entity "tracking_config" as config {
    * ship_id : INTEGER <<PK, FK>>
    * enabled_from : TIMESTAMPTZ <<PK>>
    --
    enabled_to : TIMESTAMPTZ
}

entity "position_history" as history {
    * id : BIGSERIAL <<PK>>
    --
    ship_id : INTEGER <<FK>>
    course_over_ground : FLOAT
    speed_over_ground : FLOAT
    navigational_status : VARCHAR(100)
    latitude : DOUBLE PRECISION
    longitude : DOUBLE PRECISION
    recorded_at : TIMESTAMPTZ
}

entity "ships_static_data" as static {
    * ship_id : INTEGER <<PK>>
    --
    ship_name : VARCHAR(50)
    call_sign : VARCHAR(20)
    imo_number : INTEGER
    ship_type : VARCHAR(100)
    destination : VARCHAR(50)
    eta : VARCHAR(20)
    length_m : INTEGER
    width_m : INTEGER
    draught_m : FLOAT
    updated_at : TIMESTAMPTZ
}

ships ||--o| config : "specifies tracking on/off"
ships ||--o{ history : "has positions if tracked"
ships ||--o| static : "enriched by static data"

@enduml